--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <div class="container">
   <section class="header">
-    <img src="\assets\img\logooo.png" alt="img logo" id="logoAlcides" width="170">
+    <img src="logooo.png" alt="img logo" id="logoAlcides" width="170">
     <h2>Alcides Tenório</h2>
   </section>
 
